--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ author_profile: true
 
 <p style="font-size: 0.8rem;">
 I am a Ph.D. student at East China Normal University.</br>
-I'm working at <a href="http://www.cuhk.edu.cn/">The Chinese University of HongKong</a> as a Research Assistant in 2018.05.10--2018.09.10.
-My main research interests include deep learning for image enhancement & restoration.
+I'm working at <a href="http://www.cuhk.edu.cn/">The Chinese University of HongKong (CUHK)</a> as a Research Assistant in 2018.05.10--2018.09.10.</br>
+My main research interests include deep learning for image enhancement & restoration.</br>
 My CV could be seen at <a href="">[PDF]</a>
 </p>
 
