--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ My CV could be seen at <a href="">[PDF]</a>
 <section style="font-size: 0.7rem;" class="publications">
     <h1 style="font-size: 1rem; font-weight: bold;">Publications</h1>
     <li>
-        <b>Progressive Feature Fusion Network for Realistic Image Dehazing</b> 
+        <b>Progressive Feature Fusion Network for Realistic Image Dehazing</b> </br>
         <a href="">[PDF]</a>
         <a href="">[Code]</a>
         </br>
@@ -43,7 +43,7 @@ My CV could be seen at <a href="">[PDF]</a>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of Asian Conference on Computer Vision (ACCV), 2018</i>
     </li>
     <li>
-        <b>An Effective Single-Image Super-Resolution Model Using Squeeze-and-Excitation Networks</b> 
+        <b>An Effective Single-Image Super-Resolution Model Using Squeeze-and-Excitation Networks</b> </br>
         <a href="">[PDF]</a>
         <a href="">[Code]</a>
         </br>
@@ -51,7 +51,7 @@ My CV could be seen at <a href="">[PDF]</a>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Neural Information Processing (ICONIP), 2018</i>
     </li>
     <li>
-        <b>Multi-scale Residual Network for Image Super-Resolution.</b>
+        <b>Multi-scale Residual Network for Image Super-Resolution.</b> </br>
         <a href="https://github.com/MIVRC/MSRN-PyTorch">[Code]</a>
         <a href="http://openaccess.thecvf.com/content_ECCV_2018/papers/Juncheng_Li_Multi-scale_Residual_Network_ECCV_2018_paper.pdf">[PDF]</a>
         </br>
@@ -59,7 +59,7 @@ My CV could be seen at <a href="">[PDF]</a>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of European Conference on Computer Vision (ECCV), 2018</i>
     </li>
     <li>
-        <b>NTIRE 2018 Challenge on Image Dehazing: Methods and Results.</b>
+        <b>NTIRE 2018 Challenge on Image Dehazing: Methods and Results.</b> </br>
         <a href="http://openaccess.thecvf.com/content_cvpr_2018_workshops/papers/w13/Ancuti_NTIRE_2018_Challenge_CVPR_2018_paper.pdf">[PDF]</a>
         <a href="">[Code]</a>
         </br>
