--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@ author_profile: true
 
 <p style="font-size: 0.8rem;">
 I am a Ph.D. student at East China Normal University.</br>
-I'm working at <a href="http://www.cuhk.edu.cn/">The Chinese University of HongKong (CUHK)</a> as a Research Assistant in 2018.05.10--2018.09.10.</br>
 My main research interests include deep learning for image enhancement & restoration.</br>
 My CV could be seen at <a href="">[PDF]</a>
 </p>
@@ -67,6 +66,18 @@ My CV could be seen at <a href="">[PDF]</a>
     </li>
 
 </section>
+
+
+<section style="font-size: 0.6rem;">
+    <h1 style="font-size: 1rem; font-weight: bold;">Social Activity</h1>
+    <li>
+        I'm working at <a href="http://www.cuhk.edu.cn/">The Chinese University of HongKong (CUHK)</a> as a Research Assistant in 2018.05.10--2018.09.10.
+    </li>
+    <li>
+        [2018 -]Electronics Letters (Reviewers)
+    </li>
+</section>
+
 
 <style>
     .publications li {
