--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@ My CV could be seen at <a href="">[PDF]</a>
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Social Activity</h1>
     <li>
-        I'm working at <a href="http://www.cuhk.edu.cn/">The Chinese University of HongKong (CUHK)</a> as a Research Assistant in 2018.05.10--2018.09.10.
+        I became a reviewer for 《Electronics Letters》in 2018.
     </li>
     <li>
-        [2018 -]Electronics Letters (Reviewers)
+        I'm working at <a href="http://www.cuhk.edu.cn/">The Chinese University of HongKong (CUHK)</a> as a Research Assistant in 2018.05.10--2018.09.10.
     </li>
 </section>
 
