--- a/index.html
+++ b/index.html
@@ -14,19 +14,22 @@ My CV could be seen at <a href="">[PDF]</a>
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">News</h1>
     <li>
-        One paper is accepted at ACCV 2018.
+        One paper is accepted at <a href="http://accv2018.net/dates/">ACCV 2018</a>.
     </li>
     <li>
-        We win thrid place in ChinaMM2018 Image Dehazing Challenge <a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md">[Website]</a>
+        We win thrid place in <a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md">"ChinaMM2018 Image Dehazing Challenge"</a>.
     </li>
     <li>
-        One paper is accepted at ICONIP 2018.
+        One paper is accepted at <a href="https://conference.cs.cityu.edu.hk/iconip/">ICONIP 2018</a>.
     </li>
     <li>
-        One paper is accepted at ECCV 2018.
+        One paper is accepted at <a href="https://eccv2018.org/">ECCV 2018</a>
     </li>
     <li>
-        We are awarded "Honorable Mention Award" in "NTIRE 2018 Challenge on Image Dehazing".
+        One paper is accepted at <a href="http://cvpr2018.thecvf.com/">CVPR-Workshop 2018</a>.
+    </li>
+    <li>
+        We are awarded "Honorable Mention Award" in <a href="http://www.vision.ee.ethz.ch/ntire18/">"NTIRE 2018 Challenge on Image Dehazing"</a>.
     </li>
 </section>
 
@@ -35,7 +38,7 @@ My CV could be seen at <a href="">[PDF]</a>
     <h1 style="font-size: 1rem; font-weight: bold;">Publications</h1>
     <li>
         <b>Progressive Feature Fusion Network for Realistic Image Dehazing</b> </br>
-        <a href="">[PDF]</a>
+        <a href="https://arxiv.org/pdf/1810.02283.pdf">[PDF]</a>
         <a href="">[Code]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang, <u>Juncheng Li</u>, and Mingwen Wang</p>
@@ -43,7 +46,7 @@ My CV could be seen at <a href="">[PDF]</a>
     </li>
     <li>
         <b>An Effective Single-Image Super-Resolution Model Using Squeeze-and-Excitation Networks</b> </br>
-        <a href="">[PDF]</a>
+        <a href="https://arxiv.org/pdf/1810.01831.pdf">[PDF]</a>
         <a href="">[Code]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang, <u>Juncheng Li</u>, Jihua	Ye, and Mingwen Wang</p>
@@ -51,8 +54,8 @@ My CV could be seen at <a href="">[PDF]</a>
     </li>
     <li>
         <b>Multi-scale Residual Network for Image Super-Resolution.</b> </br>
-        <a href="https://github.com/MIVRC/MSRN-PyTorch">[Code]</a>
         <a href="http://openaccess.thecvf.com/content_ECCV_2018/papers/Juncheng_Li_Multi-scale_Residual_Network_ECCV_2018_paper.pdf">[PDF]</a>
+        <a href="">[Code]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem"><u>Juncheng Li</u>, Faming Fang, Kangfu Mei, and Guixu Zhang</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of European Conference on Computer Vision (ECCV), 2018</i>
@@ -71,7 +74,7 @@ My CV could be seen at <a href="">[PDF]</a>
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Social Activity</h1>
     <li>
-        I became a reviewer for 《Electronics Letters》in 2018.
+        I became a reviewer of 《Electronics Letters》in 2018.
     </li>
     <li>
         I'm working at <a href="http://www.cuhk.edu.cn/">The Chinese University of HongKong (CUHK)</a> as a Research Assistant in 2018.05.10--2018.09.10.
