--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@ author_profile: true
 <p style="font-size: 0.8rem;">
 I am a Ph.D. student at East China Normal University.</br>
 My main research interests include deep learning for image enhancement & restoration.</br>
-My CV could be seen at <a href="">[PDF]</a>
 </p>
 
 <section style="font-size: 0.6rem;">
@@ -23,7 +22,7 @@ My CV could be seen at <a href="">[PDF]</a>
         One paper is accepted at <a href="https://conference.cs.cityu.edu.hk/iconip/">ICONIP 2018</a>.
     </li>
     <li>
-        One paper is accepted at <a href="https://eccv2018.org/">ECCV 2018</a>
+        One paper is accepted at <a href="https://eccv2018.org/">ECCV 2018</a>.
     </li>
     <li>
         One paper is accepted at <a href="http://cvpr2018.thecvf.com/">CVPR-Workshop 2018</a>.
@@ -42,7 +41,7 @@ My CV could be seen at <a href="">[PDF]</a>
         <a href="">[Code]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang, <u>Juncheng Li</u>, and Mingwen Wang</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of Asian Conference on Computer Vision (ACCV), 2018</i>
+        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of Asian Conference on Computer Vision (ACCV), 2018.</i>
     </li>
     <li>
         <b>An Effective Single-Image Super-Resolution Model Using Squeeze-and-Excitation Networks</b> </br>
@@ -50,7 +49,7 @@ My CV could be seen at <a href="">[PDF]</a>
         <a href="">[Code]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang, <u>Juncheng Li</u>, Jihua	Ye, and Mingwen Wang</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Neural Information Processing (ICONIP), 2018</i>
+        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Neural Information Processing (ICONIP), 2018.</i>
     </li>
     <li>
         <b>Multi-scale Residual Network for Image Super-Resolution.</b> </br>
@@ -58,7 +57,7 @@ My CV could be seen at <a href="">[PDF]</a>
         <a href="">[Code]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem"><u>Juncheng Li</u>, Faming Fang, Kangfu Mei, and Guixu Zhang</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of European Conference on Computer Vision (ECCV), 2018</i>
+        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of European Conference on Computer Vision (ECCV), 2018.</i>
     </li>
     <li>
         <b>NTIRE 2018 Challenge on Image Dehazing: Methods and Results.</b> </br>
