--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@ author_profile: true
 
 <p style="font-size: 0.8rem;">
 I am a Ph.D. student at East China Normal University.</br>
-My main research interests include deep learning for image enhancement & restoration.</br>
+My main research interests include image enhancement and reconstruction based on Deep Learning.</br>
 </p>
 
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">News</h1>
     <li>
+        One paper is accepted at <a href="http://digital-library.theiet.org/content/journals/iet-ipr/e-first">IET Image Processing</a>.
+    </li>
+    <li>
         One paper is accepted at <a href="http://accv2018.net/dates/">ACCV 2018</a>.
     </li>
     <li>
-        We win thrid place in <a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md">"ChinaMM2018 Image Dehazing Challenge"</a>.
+        We won the thrid place in <a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md">"ChinaMM2018 Image Dehazing Challenge"</a>.
     </li>
     <li>
         One paper is accepted at <a href="https://conference.cs.cityu.edu.hk/iconip/">ICONIP 2018</a>.
@@ -28,7 +31,7 @@ My main research interests include deep learning for image enhancement & restora
         One paper is accepted at <a href="http://cvpr2018.thecvf.com/">CVPR-Workshop 2018</a>.
     </li>
     <li>
-        We are awarded "Honorable Mention Award" in <a href="http://www.vision.ee.ethz.ch/ntire18/">"NTIRE 2018 Challenge on Image Dehazing"</a>.
+        We won the six place and awarded "Honorable Mention Award" in <a href="http://www.vision.ee.ethz.ch/ntire18/">"NTIRE 2018 Challenge on Image Dehazing"</a>.
     </li>
 </section>
 
