--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ My main research interests include image enhancement and reconstruction based on
         I became a reviewer of <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?reload=true&punumber=2220">《Electronics Letters》</a>in 2018.
     </li>
     <li>
-        I'm working at <a href="http://www.cuhk.edu.cn/">The Chinese University of HongKong (CUHK)</a> as a Research Assistant in 2018.05.10--2018.09.10.
+        I worked as a research assistant at <a href="http://www.cuhk.edu.cn/">The Chinese University of HongKong (CUHK)</a> in 2018.05.10--2018.09.10.
     </li>
 </section>
 
