--- a/index.html
+++ b/index.html
@@ -36,6 +36,20 @@ My main research interests include image enhancement and reconstruction based on
 </section>
 
 <p></p>
+
+
+<section style="font-size: 0.7rem;" class="publications">
+    <h1 style="font-size: 1rem; font-weight: bold;">Selected Publications</h1>
+    <li>
+        <b>Multi-scale Residual Network for Image Super-Resolution.</b> </br>
+        <a href="http://openaccess.thecvf.com/content_ECCV_2018/papers/Juncheng_Li_Multi-scale_Residual_Network_ECCV_2018_paper.pdf">[PDF]</a>
+        <a href="https://github.com/MIVRC/MSRN-PyTorch">[Code]</a>
+        </br>
+        <p style="margin: 0; padding-left: 1rem"><u>Juncheng Li</u>, Faming Fang, Kangfu Mei, and Guixu Zhang</p>
+        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of European Conference on Computer Vision (ECCV), 2018.</i>
+    </li>
+</section>
+
 <section style="font-size: 0.7rem;" class="publications">
     <h1 style="font-size: 1rem; font-weight: bold;">Publications</h1>
     <li>
@@ -55,21 +69,12 @@ My main research interests include image enhancement and reconstruction based on
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Neural Information Processing (ICONIP), 2018.</i>
     </li>
     <li>
-        <b>Multi-scale Residual Network for Image Super-Resolution.</b> </br>
-        <a href="http://openaccess.thecvf.com/content_ECCV_2018/papers/Juncheng_Li_Multi-scale_Residual_Network_ECCV_2018_paper.pdf">[PDF]</a>
-        <a href="https://github.com/MIVRC/MSRN-PyTorch">[Code]</a>
-        </br>
-        <p style="margin: 0; padding-left: 1rem"><u>Juncheng Li</u>, Faming Fang, Kangfu Mei, and Guixu Zhang</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of European Conference on Computer Vision (ECCV), 2018.</i>
-    </li>
-    <li>
         <b>NTIRE 2018 Challenge on Image Dehazing: Methods and Results.</b> </br>
         <a href="http://openaccess.thecvf.com/content_cvpr_2018_workshops/papers/w13/Ancuti_NTIRE_2018_Challenge_CVPR_2018_paper.pdf">[PDF]</a>
         <a href="">[Code]</a>
         </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition (CVPR) Workshops, 2018. </i>
     </li>
-
 </section>
 
 
