--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ My main research interests include image enhancement and reconstruction based on
     <li>
         <b>Multi-scale Residual Network for Image Super-Resolution.</b> </br>
         <a href="http://openaccess.thecvf.com/content_ECCV_2018/papers/Juncheng_Li_Multi-scale_Residual_Network_ECCV_2018_paper.pdf">[PDF]</a>
+        <a href="poster/MSRN-poster.pdf">[Poster]</a>
         <a href="https://github.com/MIVRC/MSRN-PyTorch">[Code]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem"><u>Juncheng Li</u>, Faming Fang, Kangfu Mei, and Guixu Zhang</p>
