--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ My main research interests include image enhancement and reconstruction based on
     <h1 style="font-size: 1rem; font-weight: bold;">Selected Publications</h1>
     <li>
         <b>Multi-scale Residual Network for Image Super-Resolution.</b> </br>
-        <a href="http://openaccess.thecvf.com/content_ECCV_2018/papers/Juncheng_Li_Multi-scale_Residual_Network_ECCV_2018_paper.pdf">[PDF]</a>
+        <a href="http://openaccess.thecvf.com/content_ECCV_2018/papers/Juncheng_Li_Multi-scale_Residual_Network_ECCV_2018_paper.pdf">[Paper]</a>
         <a href="poster/MSRN-poster.pdf">[Poster]</a>
         <a href="https://github.com/MIVRC/MSRN-PyTorch">[Code]</a>
         </br>
@@ -55,7 +55,7 @@ My main research interests include image enhancement and reconstruction based on
     <h1 style="font-size: 1rem; font-weight: bold;">Publications</h1>
     <li>
         <b>Progressive Feature Fusion Network for Realistic Image Dehazing</b> </br>
-        <a href="https://arxiv.org/pdf/1810.02283.pdf">[PDF]</a>
+        <a href="https://arxiv.org/pdf/1810.02283.pdf">[Paper]</a>
         <a href="">[Code]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang, <u>Juncheng Li</u>, and Mingwen Wang</p>
@@ -63,7 +63,7 @@ My main research interests include image enhancement and reconstruction based on
     </li>
     <li>
         <b>An Effective Single-Image Super-Resolution Model Using Squeeze-and-Excitation Networks</b> </br>
-        <a href="https://arxiv.org/pdf/1810.01831.pdf">[PDF]</a>
+        <a href="https://arxiv.org/pdf/1810.01831.pdf">[Paper]</a>
         <a href="">[Code]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang, <u>Juncheng Li</u>, Jihua	Ye, and Mingwen Wang</p>
@@ -71,7 +71,7 @@ My main research interests include image enhancement and reconstruction based on
     </li>
     <li>
         <b>NTIRE 2018 Challenge on Image Dehazing: Methods and Results.</b> </br>
-        <a href="http://openaccess.thecvf.com/content_cvpr_2018_workshops/papers/w13/Ancuti_NTIRE_2018_Challenge_CVPR_2018_paper.pdf">[PDF]</a>
+        <a href="http://openaccess.thecvf.com/content_cvpr_2018_workshops/papers/w13/Ancuti_NTIRE_2018_Challenge_CVPR_2018_paper.pdf">[Paper]</a>
         <a href="">[Code]</a>
         </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition (CVPR) Workshops, 2018. </i>
