--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@ My main research interests include image enhancement and reconstruction based on
     <h1 style="font-size: 1rem; font-weight: bold;">Selected Publications</h1>
     <li>
         <b>Multi-scale Residual Network for Image Super-Resolution.</b> </br>
+        <!--.
         <a href="http://openaccess.thecvf.com/content_ECCV_2018/papers/Juncheng_Li_Multi-scale_Residual_Network_ECCV_2018_paper.pdf">[Paper]</a>
+        -->
+        <a href="paper/ECCV-MSRN.pdf">[Paper]</a>
         <a href="poster/MSRN-poster.pdf">[Poster]</a>
         <a href="https://github.com/MIVRC/MSRN-PyTorch">[Code]</a>
         </br>
