--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ My main research interests include image enhancement and reconstruction based on
         <!--.
         <a href="http://openaccess.thecvf.com/content_ECCV_2018/papers/Juncheng_Li_Multi-scale_Residual_Network_ECCV_2018_paper.pdf">[Paper]</a>
         -->
-        <a href="paper/ECCV-MSRN.pdf">[Paper]</a>
+        <a href="paper/MSRN-paper.pdf">[Paper]</a>
         <a href="poster/MSRN-poster.pdf">[Poster]</a>
         <a href="https://github.com/MIVRC/MSRN-PyTorch">[Code]</a>
         </br>
@@ -54,7 +54,8 @@ My main research interests include image enhancement and reconstruction based on
     </li>
 </section>
 
-<section style="font-size: 0.7rem;" class="publications">
+<section style="font-size: 0.7rem;" class="publicati
+ons">
     <h1 style="font-size: 1rem; font-weight: bold;">Publications</h1>
     <li>
         <b>Progressive Feature Fusion Network for Realistic Image Dehazing</b> </br>
