--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ ons">
     </li>
     <li>
         <b>An Effective Single-Image Super-Resolution Model Using Squeeze-and-Excitation Networks</b> </br>
-        <a href="https://arxiv.org/pdf/1810.01831.pdf">[Paper]</a>
+        <a href="paper/SrSENet-paper.pdf">[Paper]</a>
         <a href="">[Code]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang, <u>Juncheng Li</u>, Jihua	Ye, and Mingwen Wang</p>
