--- a/index.html
+++ b/index.html
@@ -91,7 +91,10 @@ ons">
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Social Activity</h1>
     <li>
-        I became a reviewer of <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?reload=true&punumber=2220">《Electronics Letters》</a>in 2018.
+        I became a reviewer of《IET Image Processing》</a>in 2018.
+    </li>
+    <li>
+        I became a reviewer of《IET Electronics Letters》</a>in 2018.
     </li>
     <li>
         I worked as a research assistant at <a href="http://www.cuhk.edu.cn/">The Chinese University of HongKong (CUHK)</a> in 2018.05.10--2018.09.10.
