--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@ ons">
         <b>Deep Residual Refining based Pseudo Multi-frame Network for Effective Single Image Super-Resolution</b> </br>
         <p style="margin: 0; padding-left: 1rem">Aiwen Jiang, Kangfu Mei, <u>Juncheng Li</u>, Bo Liu, Jihua Ye and Mingwen Wang</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IET Image Processing</i>
+        <a href="paper/RPMNet-paper.pdf">[Paper]</a>
+        <a href="">[Code]</a>
     </li>
     <li>
         <b>Progressive Feature Fusion Network for Realistic Image Dehazing</b> </br>
