--- a/index.html
+++ b/index.html
@@ -54,15 +54,16 @@ My main research interests include image enhancement and reconstruction based on
     </li>
 </section>
 
-<section style="font-size: 0.7rem;" class="publicati
-ons">
+<section style="font-size: 0.7rem;" class="publications">
     <h1 style="font-size: 1rem; font-weight: bold;">Publications</h1>
     <li>
         <b>Deep Residual Refining based Pseudo Multi-frame Network for Effective Single Image Super-Resolution</b> </br>
-        <p style="margin: 0; padding-left: 1rem">Aiwen Jiang, Kangfu Mei, <u>Juncheng Li</u>, Bo Liu, Jihua Ye and Mingwen Wang</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">IET Image Processing</i>
         <a href="paper/RPMNet-paper.pdf">[Paper]</a>
         <a href="">[Code]</a>
+        </br>
+        <p style="margin: 0; padding-left: 1rem">Aiwen Jiang, Kangfu Mei, <u>Juncheng Li</u>, Bo Liu, Jihua Ye and Mingwen Wang</p>
+        <i style="font-size: 0.6rem; padding-left: 1rem">IET Image Processing</i>
+
     </li>
     <li>
         <b>Progressive Feature Fusion Network for Realistic Image Dehazing</b> </br>
