--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ author_profile: true
 <h1 style="font-size: 1rem; font-weight: bold;">Juncheng Lee</h1>
 
 <p style="font-size: 0.8rem;">
-I am a Ph.D. student at East China Normal University.</br>
-My main research interests include image enhancement and reconstruction based on Deep Learning.</br>
+I am a Ph.D. student in East China Normal University (ECNU).</br>
+My main research interests include image reconstruction and enhancement based on Deep Learning.</br>
 </p>
 
 <section style="font-size: 0.6rem;">
@@ -45,7 +45,7 @@ My main research interests include image enhancement and reconstruction based on
         <!--.
         <a href="http://openaccess.thecvf.com/content_ECCV_2018/papers/Juncheng_Li_Multi-scale_Residual_Network_ECCV_2018_paper.pdf">[Paper]</a>
         -->
-        <a href="paper/MSRN-paper.pdf">[Paper]</a>
+        <a href="paper/ECCV_2018.pdf">[Paper]</a>
         <a href="poster/MSRN-poster.pdf">[Poster]</a>
         <a href="https://github.com/MIVRC/MSRN-PyTorch">[Code]</a>
         </br>
@@ -58,7 +58,7 @@ My main research interests include image enhancement and reconstruction based on
     <h1 style="font-size: 1rem; font-weight: bold;">Publications</h1>
     <li>
         <b>Deep Residual Refining based Pseudo Multi-frame Network for Effective Single Image Super-Resolution</b> </br>
-        <a href="paper/RPMNet-paper.pdf">[Paper]</a>
+        <a href="paper/IET_2018.pdf">[Paper]</a>
         <a href="">[Code]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem">Aiwen Jiang, Kangfu Mei, <u>Juncheng Li</u>, Bo Liu, Jihua Ye and Mingwen Wang</p>
@@ -75,7 +75,7 @@ My main research interests include image enhancement and reconstruction based on
     </li>
     <li>
         <b>An Effective Single-Image Super-Resolution Model Using Squeeze-and-Excitation Networks</b> </br>
-        <a href="paper/SrSENet-paper.pdf">[Paper]</a>
+        <a href="paper/ICONIP_2018.pdf">[Paper]</a>
         <a href="">[Code]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang, <u>Juncheng Li</u>, Jihua	Ye, and Mingwen Wang</p>
@@ -83,7 +83,7 @@ My main research interests include image enhancement and reconstruction based on
     </li>
     <li>
         <b>NTIRE 2018 Challenge on Image Dehazing: Methods and Results.</b> </br>
-        <a href="http://openaccess.thecvf.com/content_cvpr_2018_workshops/papers/w13/Ancuti_NTIRE_2018_Challenge_CVPR_2018_paper.pdf">[Paper]</a>
+        <a href="paper/CVPRW_2018.pdf">[Paper]</a>
         <a href="">[Code]</a>
         </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition (CVPR) Workshops, 2018. </i>
@@ -99,8 +99,16 @@ My main research interests include image enhancement and reconstruction based on
     <li>
         I became a reviewer of《IET Electronics Letters》</a>in 2018.
     </li>
+</section>
+
+
+<section style="font-size: 0.6rem;">
+    <h1 style="font-size: 1rem; font-weight: bold;">Social Activity</h1>
     <li>
-        I worked as a research assistant at <a href="http://www.cuhk.edu.cn/">The Chinese University of HongKong (CUHK)</a> in 2018.05.10--2018.09.10.
+        Academic Visitor at <a href="http://www.cuhk.edu.cn/"> The Chinese University of HongKong (CUHK)</a> in 2019.8.16--2019.09.30.
+    </li>
+    <li>
+        Research Assistant at <a href="http://www.cuhk.edu.cn/">The Chinese University of HongKong (CUHK)</a> in 2018.05.10--2018.09.10.
     </li>
 </section>
 
