--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ My main research interests include image reconstruction and enhancement based on
 
 
 <section style="font-size: 0.6rem;">
-    <h1 style="font-size: 1rem; font-weight: bold;">Social Activity</h1>
+    <h1 style="font-size: 1rem; font-weight: bold;">Research Experiences</h1>
     <li>
         Academic Visitor at <a href="http://www.cuhk.edu.cn/"> The Chinese University of HongKong (CUHK)</a> in 2019.8.16--2019.09.30.
     </li>
