--- a/index.html
+++ b/index.html
@@ -114,6 +114,18 @@ My main research interests include image reconstruction and enhancement based on
     </li>
 </section>
 
+<p></p>
+
+<section style="font-size: 0.6rem;">
+    <h1 style="font-size: 1rem; font-weight: bold;">Research Experiences</h1>
+    <li>
+        My friend and I build a non-profit organization (<a href="https://github.com/MIVRC"> MIVRC</a>) for open source image processing projects.
+    </li>
+    <li>
+        I build CLFStudio in 2015, a student studio dedicated to creative project development.
+    </li>
+</section>
+
 
 <style>
     .publications li {
