--- a/index.html
+++ b/index.html
@@ -95,7 +95,10 @@ My main research interests include image reconstruction and enhancement based on
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Social Activity</h1>
     <li>
-        My friend and I build a non-profit organization (<a href="https://github.com/MIVRC">MIVRC</a>) for open source image processing projects.
+        I became a reviewer of《IET Signal Processing》</a>in 2019.
+    </li>
+    <li>
+        My friend and I build a non-profit organization (<a href="https://github.com/MIVRC">MIVRC</a>) for open source image processing projects in 2019.
     </li>
     <li>
         I became a reviewer of《IET Image Processing》</a>in 2018.
