--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@ My main research interests include image reconstruction and enhancement based on
     </li>
     <li>
         <b>Progressive Feature Fusion Network for Realistic Image Dehazing</b> </br>
-        <a href="https://arxiv.org/pdf/1810.02283.pdf">[Paper]</a>
+        <a href="paper/ACCV_2018.pdf">[Paper]</a>
         <a href="https://github.com/MIVRC/PFFNet-PyTorch">[Code]</a>
-        </br>
+        </br>A
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang, <u>Juncheng Li</u>, and Mingwen Wang</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of Asian Conference on Computer Vision (ACCV), 2018.</i>
     </li>
