--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ author_profile: true
 
 <p style="font-size: 0.8rem;">
 I am a Ph.D. student in East China Normal University (ECNU).</br>
-My main research interests include image reconstruction and enhancement based on Deep Learning.</br>
+My main research interests include image reconstruction and enhancement based on Deep Learning. My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN">Juncheng Li (李俊诚)</a></br>
 </p>
 
 <section style="font-size: 0.6rem;">
@@ -94,6 +94,9 @@ My main research interests include image reconstruction and enhancement based on
 
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Social Activity</h1>
+    <li>
+        I became a reviewer of《IET Computer Vision》</a>in 2019.
+    </li>
     <li>
         I became a reviewer of《IET Signal Processing》</a>in 2019.
     </li>
