add new information

--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@ My main research interests include image reconstruction and enhancement based on
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Social Activity</h1>
     <li>
+        I became a reviewer of《IEEE Transactions on Image Processing》</a>in 2019.
+    </li>
+    <li>
         I became a reviewer of《IET Computer Vision》</a>in 2019.
     </li>
     <li>
