add new information

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@ My main research interests include image reconstruction and enhancement based on
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">News</h1>
     <li>
+        One paper is accepted at <a href="https://sites.google.com/view/iccv-lci2019">ICCV-Workshop 2019</a>.
+    </li>
+    <li>
         One paper is accepted at <a href="http://digital-library.theiet.org/content/journals/iet-ipr/e-first">IET Image Processing</a>.
     </li>
     <li>
@@ -86,7 +89,7 @@ My main research interests include image reconstruction and enhancement based on
         <a href="paper/CVPRW_2018.pdf">[Paper]</a>
         <a href="">[Code]</a>
         </br>
-        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition (CVPR) Workshops, 2018. </i>
+        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition (CVPR) Workshop, 2018. </i>
     </li>
 </section>
 
