--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@ My main research interests include image reconstruction and enhancement based on
 <section style="font-size: 0.7rem;" class="publications">
     <h1 style="font-size: 1rem; font-weight: bold;">Selected Publications</h1>
     <li>
+        <b>Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution.</b> </br>
+        <a href="">[Paper]</a>
+        <a href="">[Poster]</a>
+        <a href="">[Code]</a>
+        </br>
+        <p style="margin: 0; padding-left: 1rem"><u>Juncheng Li</u>, Yiting Yuan, Kangfu Mei, and Faming Fang</p>
+        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (ICCVW), 2019.</i>
+    </li>
+    <li>
         <b>Multi-scale Residual Network for Image Super-Resolution.</b> </br>
         <!--.
         <a href="http://openaccess.thecvf.com/content_ECCV_2018/papers/Juncheng_Li_Multi-scale_Residual_Network_ECCV_2018_paper.pdf">[Paper]</a>
