--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ My main research interests include image reconstruction and enhancement based on
         <a href="">[Code]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem">Aiwen Jiang, Kangfu Mei, <u>Juncheng Li</u>, Bo Liu, Jihua Ye and Mingwen Wang</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">IET Image Processing</i>
+        <i style="font-size: 0.6rem; padding-left: 1rem">IET Image Processing, 2019</i>
 
     </li>
     <li>
@@ -98,7 +98,7 @@ My main research interests include image reconstruction and enhancement based on
         <a href="paper/CVPRW_2018.pdf">[Paper]</a>
         <a href="">[Code]</a>
         </br>
-        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition (CVPR) Workshop, 2018. </i>
+        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition Workshop (CVPRW), 2018. </i>
     </li>
 </section>
 
