--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ My main research interests include image reconstruction and enhancement based on
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">News</h1>
     <li>
-        One paper is accepted at <a href="https://sites.google.com/view/iccv-lci2019">ICCV-Workshop 2019</a>.
+        One paper is accepted at <a href="https://sites.google.com/view/iccv-lci2019">ICCV-Workshop 2019 (Oral)</a>.
     </li>
     <li>
         One paper is accepted at <a href="http://digital-library.theiet.org/content/journals/iet-ipr/e-first">IET Image Processing</a>.
