--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ My main research interests include image reconstruction and enhancement based on
         <a href="">[Code]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem"><u>Juncheng Li</u>, Yiting Yuan, Kangfu Mei, and Faming Fang</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (ICCVW), 2019.</i>
+        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (ICCVW), 2019, (Oral).</i>
     </li>
     <li>
         <b>Multi-scale Residual Network for Image Super-Resolution.</b> </br>
