--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@ My main research interests include image reconstruction and enhancement based on
     <h1 style="font-size: 1rem; font-weight: bold;">Selected Publications</h1>
     <li>
         <b>Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution.</b> </br>
-        <a href="paper/ICCVW_2019.pdf"">[Paper]</a>
+        <a href="paper/ICCVW_2019.pdf">[Paper]</a>
         <!-- <a href="">[Poster]</a>
         <a href="">[Code]</a> -->
         </br>
         <p style="margin: 0; padding-left: 1rem"><u>Juncheng Li</u>, Yiting Yuan, Kangfu Mei, and Faming Fang</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (ICCVW), 2019, (Oral).</i>
+        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (ICCVW, Oral), 2019.</i>
     </li>
     <li>
         <b>Multi-scale Residual Network for Image Super-Resolution.</b> </br>
@@ -77,7 +77,6 @@ My main research interests include image reconstruction and enhancement based on
     <li>
         <b>Deep Residual Refining based Pseudo Multi-frame Network for Effective Single Image Super-Resolution</b> </br>
         <a href="paper/IET_2018.pdf">[Paper]</a>
-        <a href="">[Code]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem">Aiwen Jiang, Kangfu Mei, <u>Juncheng Li</u>, Bo Liu, Jihua Ye and Mingwen Wang</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IET Image Processing, 2019</i>
@@ -94,7 +93,6 @@ My main research interests include image reconstruction and enhancement based on
     <li>
         <b>An Effective Single-Image Super-Resolution Model Using Squeeze-and-Excitation Networks</b> </br>
         <a href="paper/ICONIP_2018.pdf">[Paper]</a>
-        <a href="">[Code]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang, <u>Juncheng Li</u>, Jihua	Ye, and Mingwen Wang</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Neural Information Processing (ICONIP), 2018.</i>
