--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@ My main research interests include image reconstruction and enhancement based on
     <li>
         <b>Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution.</b> </br>
         <a href="paper/ICCVW_2019.pdf">[Paper]</a>
-        <!-- <a href="">[Poster]</a>
-        <a href="">[Code]</a> -->
+        [Poster]
+        [Code]
         </br>
         <p style="margin: 0; padding-left: 1rem"><u>Juncheng Li</u>, Yiting Yuan, Kangfu Mei, and Faming Fang</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (ICCVW, Oral), 2019.</i>
